# factor_research

./: .gitattributes  .gitignore  README.md  docker-compose.yml  start.bat  start.sh  stop.bat  stop.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  config.py  pyproject.toml  requirements.txt
backend/adapters/: __init__.py  akshare_industry.py  akshare_live.py  base.py
backend/api/: __init__.py  main.py  schemas.py
backend/engine/: __init__.py  base_factor.py
backend/execution_layer/: __init__.py  base.py  simulated.py
backend/factors/: __init__.py  base.py
backend/observability/: __init__.py  db_metrics.py  metrics.py  router.py
backend/runtime/: __init__.py  entries.py  factor_registry.py  hot_reload.py  task_pool.py
backend/scripts/: __init__.py  aggregate_bar_1d.py  archive_today_1m.py  backfill_daily_bars.py  backfill_historical_indicator.py  backfill_market_data.py  import_qfq.py  init_clickhouse.sql  init_mysql.sql  probe_baostock.py  run_init.py
backend/services/: __init__.py  abort_check.py  attribution.py  backtest_artifact_view.py  backtest_service.py  chanlun_service.py  composition_service.py  cost_sensitivity_service.py  datasource_probe_service.py  eval_service.py  execution.py  factor_assistant.py  grid_search_service.py  llm_eval_diagnose.py  metrics.py  neutralization.py  optimizer.py  paper_trading_service.py  param_sensitivity_service.py  params_hash.py  pattern_learn.py  pattern_query.py  pattern_search.py  pattern_search_run_service.py  risk_control.py  run_status.py  signal_backtest.py  signal_service.py  (+2 more)
(+356 files in other folders)
