[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
baostock = { index = "pypi" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[project]
name = "factor-research-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "pymysql==1.1.1",
    "sqlalchemy==2.0.35",
    "clickhouse-driver==0.2.9",
    "pandas==2.2.3",
    "numpy==1.26.4",
    "numba==0.60.0",
    "pyarrow==17.0.0",
    "vectorbt==0.28.5",
    "watchdog==5.0.3",
    "httpx==0.27.2",
    # 必须 0.8.90+：旧版 0.8.9 硬编码的服务端 host/IP 已下线，socket recv 会无限挂起。
    # 国内镜像（清华/阿里/豆瓣）对小众包同步滞后，只有 0.8.9，需要确保从 pypi.org 拉。
    "baostock>=0.8.90",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "cryptography>=46.0.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
markers = [
    "integration: 需要真实数据库（ClickHouse / MySQL）的集成测试",
]
